Closed Bug 1708480 Opened 3 years ago Closed 3 years ago

Windows "widget/windows/nsWindow.cpp(625,23): error: use of undeclared identifier 'InitializeVirtualDesktopManagerTask'" build bustage with --disable-accessibility

Categories

(Firefox :: Session Restore, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 --- fixed

People

(Reporter: RyanVM, Assigned: bas.schouten)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

In file included from Unified_cpp_widget_windows3.cpp:20:
C:/Users/Ryan/repos/mozilla/widget/windows/nsWindow.cpp(625,23): error: use of undeclared identifier 'InitializeVirtualDesktopManagerTask'; did you mean 'gInitializedVirtualDesktopManager'?
        MakeAndAddRef<InitializeVirtualDesktopManagerTask>());
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                      gInitializedVirtualDesktopManager
C:/Users/Ryan/repos/mozilla/widget/windows/nsWindow.cpp(374,13): note: 'gInitializedVirtualDesktopManager' declared here
static bool gInitializedVirtualDesktopManager = false;
            ^
C:/Users/Ryan/repos/mozilla/widget/windows/nsWindow.cpp(625,9): error: no matching function for call to 'MakeAndAddRef'
        MakeAndAddRef<InitializeVirtualDesktopManagerTask>());
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include\mozilla/RefPtr.h(589,21): note: candidate template ignored: invalid explicitly-specified argument for template parameter 'T'
already_AddRefed<T> MakeAndAddRef(Args&&... aArgs) {
                    ^
Flags: needinfo?(bas)
Assignee: nobody → ryanvm
Status: NEW → ASSIGNED
Attachment #9219263 - Attachment is obsolete: true
Assignee: ryanvm → bas
Pushed by rvandermeulen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/468437104b97
Move InitializeVirtualDesktopManagerTask outside of #ifdef ACCESSIBILITY. r=mikedeboer
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Flags: needinfo?(bas)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: