Bug 1708480: Move InitializeVirtualDesktopManagerTask outside of #ifdef ACCESSIBILITY. r=mikedeboer

Differential Revision: https://phabricator.services.mozilla.com/D113816